--- a/Project 3/styles/styles.css
+++ b/Project 3/styles/styles.css
@@ -38,10 +38,11 @@ button{
     font-family:  'Lucida Sans Unicode';
 }
 #movie2{
-    font-family:  'Arial';
+    font-family:  'Lucida Sans Unicode';
 }
 #movie3{
-    font-family: 'Times New Roman';
+    font-family: 'Lucida Sans Unicode'
 }
 #movie4{
-    font-family: 'Impact';
+    font-family: 'Lucida Sans Unicode';
+}
