--- a/Project 4/styles/styles.css
+++ b/Project 4/styles/styles.css
@@ -1,3 +1,11 @@
-#bold{
+#head{
     font-weight: bold;
+}
+#mamo{
+    float: left;
+    display: inline;
+}
+#mamo-text{
+    text-align:right
+    
 }
